--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,8 @@ jobs:
         uses: actions/setup-python@v5
         with: 
           python-version: '3.13'
+      - name: installing requirements
+        run : pip install -r requirements.txt
       - name: ejecutando connector.py
         run: python tutorials/pokemon_not_paginated/connector.py
     
