--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,10 @@ jobs:
         uses: actions/setup-python@v5
         with: 
           python-version: '3.10'
+      - name: installing fivetran SDK
+        run: pip install fivetran_connector_sdk:latest
+      - name: installing requests
+        run: pip install requests:2.32.4
       - name: installing requirements
         run : pip install -r tutorials/pokemon_not_paginated/requirements.txt
       - name: ejecutando connector.py
